<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/view_margin_line"
        >
        <TextView
            android:id="@+id/cancel"
            android:padding="@dimen/info_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/info_title_text"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:gravity="right"
            android:textSize="@dimen/info_title_text"
            android:padding="@dimen/info_margin"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
    <TextView
        android:textColor="@color/view_margin_line"
        android:id="@+id/sexual_male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/info_title_text"
        android:text="@string/male"
        android:gravity="center_horizontal"
        android:padding="@dimen/info_margin"/>
    <TextView
        android:id="@+id/sexual_female"
        android:textColor="@color/title_font_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/info_title_text"
        android:text="@string/female"
        android:gravity="center_horizontal"
        android:padding="@dimen/info_margin"/>
    </LinearLayout>
</LinearLayout>